# Thinkify

./: .gitignore  README.md
backend/: alembic.ini  enums.py  main.py  pyproject.toml
backend/ai_engine/: __init__.py  endpoints.py  models.py  repository.py  schemas.py  service.py
backend/alembic/: env.py
backend/auth/: __init__.py  endpoints.py  models.py  repository.py  service.py  shemas.py
backend/database/: __init__.py  postgresql_core.py
frontend/: article.html  login.html  main.html  newtopic.html  test.html
frontend/css/: article.css  login.css  main.css  newtopic.css  test.css
frontend/html/: article.html  login.html  main.html
frontend/js/: login.js  newtopic.js  script.js  test.js
